--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: windows-2022
     strategy:
       matrix:
-        python: ["3.9", "3.10"]
+        python: ["3.7", "3.9", "3.10"]
         platform: [x64, win32]
         vstudio: [17]
         include:
