--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
         with:
-          repository: Lord-Kamina/gvsbuild
+          repository: ${{ github.repository_owner }}/gvsbuild
           fetch-depth: 0
           ref: ${{ github.event.inputs.ref }}
 
