--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,7 +62,7 @@ jobs:
           architecture: ${{ matrix.arch }}
 
       - name: Install Build Deps
-        run: python -m pip install wheel build
+        run: python -m pip install wheel build setuptools==76.1.0
 
       - name: Install gvsbuild tool
         run: python -m pip install .
